--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section class="latest-projects">
         <div class="container">
           <h2>Mon dernier project</h2>
-          <div class="latest-ptojects-img">
+          <div class="latest-projects-img">
             <img
               src="./images/accueil/element-1.png"
               alt="Coastal rock formations in the ocean at sunset"
