--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </div>
       <nav>
         <ul class="flex">
-          <a href=""><li>Accueil</li></a>
-          <a href=""><li>À propos</li></a>
-          <a href=""><li>Portfolio</li></a>
+          <li><a href="./index.html">Accueil</a></li>
+          <li><a href="./a-propos.html">À propos</a></li>
+          <li><a href="">Portfolio</a></li>
         </ul>
       </nav>
     </header>
